@@ -208,6 +208,42 @@ name|SolrIndexConfigTest
 extends|extends
 name|SolrTestCaseJ4
 block|{
+DECL|field|solrConfigFileName
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|solrConfigFileName
+init|=
+literal|"solrconfig.xml"
+decl_stmt|;
+DECL|field|solrConfigFileNameWarmer
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|solrConfigFileNameWarmer
+init|=
+literal|"solrconfig-warmer.xml"
+decl_stmt|;
+DECL|field|solrConfigFileNameTieredMergePolicy
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|solrConfigFileNameTieredMergePolicy
+init|=
+literal|"solrconfig-tieredmergepolicy.xml"
+decl_stmt|;
+DECL|field|schemaFileName
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|schemaFileName
+init|=
+literal|"schema.xml"
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -221,9 +257,9 @@ name|Exception
 block|{
 name|initCore
 argument_list|(
-literal|"solrconfig.xml"
+name|solrConfigFileName
 argument_list|,
-literal|"schema.xml"
+name|schemaFileName
 argument_list|)
 expr_stmt|;
 block|}
@@ -240,22 +276,6 @@ name|resolve
 argument_list|(
 literal|"collection1"
 argument_list|)
-decl_stmt|;
-DECL|field|solrConfigFileNameWarmer
-specifier|private
-specifier|final
-name|String
-name|solrConfigFileNameWarmer
-init|=
-literal|"solrconfig-warmer.xml"
-decl_stmt|;
-DECL|field|solrConfigFileNameTieredMergePolicy
-specifier|private
-specifier|final
-name|String
-name|solrConfigFileNameTieredMergePolicy
-init|=
-literal|"solrconfig-tieredmergepolicy.xml"
 decl_stmt|;
 annotation|@
 name|Test
@@ -296,7 +316,7 @@ name|IndexSchemaFactory
 operator|.
 name|buildIndexSchema
 argument_list|(
-literal|"schema.xml"
+name|schemaFileName
 argument_list|,
 name|solrConfig
 argument_list|)
@@ -384,7 +404,7 @@ name|IndexSchemaFactory
 operator|.
 name|buildIndexSchema
 argument_list|(
-literal|"schema.xml"
+name|schemaFileName
 argument_list|,
 name|solrConfig
 argument_list|)
@@ -599,7 +619,7 @@ name|IndexSchemaFactory
 operator|.
 name|buildIndexSchema
 argument_list|(
-literal|"schema.xml"
+name|schemaFileName
 argument_list|,
 name|solrConfig
 argument_list|)
